[gd_scene load_steps=14 format=2]

[ext_resource path="res://ui/menus/run/end_run.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/menus/shop/shop_background.png" type="Texture" id=3]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=4]
[ext_resource path="res://resources/fonts/actual/base/font_floating_text.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/menus/run/challenge_and_reward_ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/menus/shop/weapons.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/global/focus_manager.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/menus/shop/items_container.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=10]
[ext_resource path="res://ui/menus/shop/weapons_container.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/menus/shop/item_popup.tscn" type="PackedScene" id=13]

[node name="EndRun" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="FocusManager" parent="." instance=ExtResource( 8 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1566.0
custom_constants/separation = 25
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1820.0
margin_bottom = 45.0
custom_constants/separation = 50
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 689.0
margin_right = 889.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "RUN_LOST"

[node name="RunInfo" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 939.0
margin_right = 1131.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
text = "RUN_INFO"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 1820.0
margin_bottom = 1426.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 1820.0
margin_bottom = 1356.0
size_flags_horizontal = 3
custom_constants/separation = 25

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.784314 )
margin_left = 281.0
margin_right = 1539.0
margin_bottom = 1356.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1253.0
margin_bottom = 1351.0
custom_constants/separation = 100
alignment = 1

[node name="StatsContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer" instance=ExtResource( 10 )]
margin_top = 0.0
margin_bottom = 1346.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer"]
margin_left = 484.0
margin_right = 1248.0
margin_bottom = 1346.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2"]
margin_left = 32.0
margin_top = 32.0
margin_right = 732.0
margin_bottom = 1314.0
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 700.0
margin_bottom = 166.0
custom_constants/separation = 50

[node name="WeaponsContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 11 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 318.0
margin_bottom = 166.0
size_flags_vertical = 1
nb_columns = 6

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/WeaponsContainer" index="0"]
margin_bottom = 45.0

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/WeaponsContainer" index="1"]
margin_top = 70.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 96 )

[node name="ProgressContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 11 )]
margin_left = 368.0
margin_top = 0.0
margin_right = 700.0
margin_bottom = 166.0
size_flags_vertical = 1
nb_columns = 4

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/ProgressContainer" index="0"]
margin_right = 332.0
margin_bottom = 45.0
text = "MENU_PROGRESS"

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/ProgressContainer" index="1"]
margin_top = 70.0
margin_right = 332.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 96 )

[node name="Elements" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/ProgressContainer/ScrollContainer/MarginContainer" index="0"]
columns = 4

[node name="ItemsContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource( 9 )]
margin_top = 216.0
margin_right = 700.0
margin_bottom = 706.0
size_flags_vertical = 1
nb_columns = 10

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/ItemsContainer" index="0"]
margin_right = 700.0
margin_bottom = 45.0

[node name="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/ItemsContainer" index="1"]
margin_top = 70.0
margin_right = 700.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 420 )

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 1330.0
margin_right = 1820.0
margin_bottom = 826.0
custom_constants/separation = 25

[node name="ChallengesCompletedLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 490.0
margin_bottom = 45.0
text = "CHALLENGES_COMPLETED"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 70.0
margin_right = 490.0
margin_bottom = 826.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_bottom = 756.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ScrollContainer"]
margin_bottom = 10.0
custom_constants/margin_bottom = 10

[node name="Inventory" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ScrollContainer/MarginContainer" instance=ExtResource( 7 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
columns = 1

[node name="ChallengeAndRewardUI" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 4.0
margin_right = 490.0
margin_bottom = 756.0

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ChallengeAndRewardUI" index="1"]
margin_right = 486.0
margin_bottom = 756.0

[node name="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ChallengeAndRewardUI/VBoxContainer" index="0"]
margin_right = 486.0

[node name="ItemPanelUI" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ChallengeAndRewardUI/VBoxContainer" index="1"]
margin_left = 63.0
margin_right = 422.0
margin_bottom = 372.0

[node name="ZonePanel" parent="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ChallengeAndRewardUI/VBoxContainer" index="2"]
margin_left = 95.0
margin_top = 397.0
margin_right = 391.0
margin_bottom = 586.0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 1451.0
margin_right = 1820.0
margin_bottom = 1516.0
custom_constants/separation = 25
alignment = 1

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 256.0
margin_right = 556.0
margin_bottom = 65.0
rect_min_size = Vector2( 300, 0 )
text = "MENU_RETRY"
script = ExtResource( 4 )

[node name="NewRunButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 581.0
margin_right = 939.0
margin_bottom = 65.0
rect_min_size = Vector2( 300, 0 )
text = "MENU_NEW_RUN"
script = ExtResource( 4 )

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 964.0
margin_right = 1564.0
margin_bottom = 65.0
rect_min_size = Vector2( 600, 0 )
text = "MENU_RETURN_MAIN"
script = ExtResource( 4 )

[node name="ItemPopup" parent="." instance=ExtResource( 13 )]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0

[node name="StatPopup" parent="." instance=ExtResource( 12 )]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 50.0
margin_bottom = 50.0

[connection signal="element_pressed" from="FocusManager" to="." method="_on_FocusManager_element_pressed"]
[connection signal="element_focused" from="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ScrollContainer/MarginContainer/Inventory" to="." method="_on_Inventory_element_focused"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/NewRunButton" to="." method="_on_NewRunButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/ExitButton" to="." method="_on_ExitButton_pressed"]

[editable path="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/WeaponsContainer"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/HBoxContainer/ProgressContainer"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer/PanelContainer/HBoxContainer/MarginContainer2/VBoxContainer/ItemsContainer"]
[editable path="MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/ChallengeAndRewardUI"]
